--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,7 @@
 {
-  "customer_id": "urbanjungle",
-  "password": "alpha-bravo-123",
+
   "vapi_assistant_id": "31377f1e-dd62-43df-bc3c-ca8e87e08138",
   "vapi_api_key": "e4077034-d96a-41c7-8f49-e36accb11fb4",
-  "server_url": "https://securevoice-production-eb77.up.railway.app",
+  "server_url": "securevoice-production-eb77.up.railway.app",
   "homeassistant_url": "https://ut-demo-urbanjungle.homeadapt.us"
 }
